dav: Default max-conns-per-host for SoupSession limits open files to 2
WebDAV backend uses a SoupSession
created with the default max-conns-per-host
option (which is 2
) when connecting to a server (code found here). This limits simultaneously open files to only 2. It seems this value is too small.
I first noticed this because I found the whole backend entered a deadlock state when I tried opening a video file with its subtitle file (both on remote) in the VLC Player. Actually, this could be reproduced by opening 3 files for read (without closing the previous when opening the next).
Changing the code to create SoupSession
with a higher max-conns-per-host
option prevented the deadlock.