dav: Increase max number of connections to prevent lockups

Currently, the default value of max-conns-per-host libsoup property is
used, which causes dav backend lockups if two files are	opened.	I don't
see any	easy solution how to prevent lockups, but we can definitely
reduce the chance of them by increasing max-conns properties. Much bigger
values are used by browsers nowadays. Hope that 16 is big enough for
regular use cases and small enough to not flood a server and not block
too much file descriptors...

https://gitlab.gnome.org/GNOME/gvfs/issues/6